fixed mobile spacing highlight section and apply now button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1109,7 +1109,7 @@ h5{
    }
 
    h4{
-      font-size: 3em;
+      font-size: 2em;
    }
 
    h5{
@@ -1178,7 +1178,7 @@ h5{
    }
 
    .register{
-      width: 38vw;
+      width:50vw;
       height: 9vw;
       line-height: 1.95em;
       font-size: 3.5vw;
@@ -1244,9 +1244,9 @@ h5{
 
    .partner-logo{
       width: 100%;
-      height: 22vw;
-      padding-left: 25px;
-      padding-right: 25px;
+      height: auto;
+      padding-left: 3%;
+      padding-right: 3%;
    }
 
    #my-canvas{
@@ -1261,9 +1261,32 @@ h5{
       max-width: 800px;
    }
 
+   #hacker-hightlight-title{
+     font-size:2.2em;
+     font-weight: bold;
+   }
+
+   .cloud-mobile{
+     margin: auto;
+     margin-top: 1em;
+     margin-bottom: 1em;
+   }
+  .highlight-name{
+    margin: auto;
+    margin-top: 1em;
+  }
+
+  .hacker-highlight-hacks{
+    width: 90%;
+    margin: auto;
+  }
+   .hacker-highlight-img{
+     width: 80%;
+     margin: auto;
+   }
+
    .word-cloud{
       font-size:1.6em;
-
    }
 
    .logo{
@@ -1360,9 +1383,8 @@ h5{
    }
 
    .about-box-3{
-      margin-top: 5em;
+      margin-top: 2%;
    }
-
    .about-box-4{
       float: left;
       width: 47%;
@@ -1431,6 +1453,10 @@ h5{
 
    #myVideo{
       display: none;
+   }
+
+   #hacker-highlight-hr{
+     display: none;
    }
 
    .logo2_alt{
